--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "movie-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://1obanov.github.io/Test-project",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -19,7 +20,9 @@
     "build": "npm run build-css && react-scripts build",
     "build-css": "node-sass src/styles/style.scss -o src/styles",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
