--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "npm run build-css && react-scripts build",
+    "build": "react-scripts build",
     "build-css": "node-sass src/styles/style.scss -o src/styles",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
